Fix - Sidebar text align and overflow issue

--- a/assets/stylesheet/scss/helpers/_mixins.scss
+++ b/assets/stylesheet/scss/helpers/_mixins.scss
@@ -1,7 +1,6 @@
 @mixin row {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -10px;
 }
 
 @mixin flex-width($width) {
